--- a/mkimage-arch-pacman.conf
+++ b/mkimage-arch-pacman.conf
@@ -14,6 +14,7 @@
 #CacheDir    = /var/cache/pacman/pkg/
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
+#HookDir     = /etc/pacman.d/hooks/
 HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
@@ -30,10 +31,9 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+Color
 #TotalDownload
-# We cannot check disk space from within a chroot environment
-#CheckSpace
+CheckSpace
 #VerbosePkgLists
 
 # By default, pacman accepts packages signed by keys that its local keyring
@@ -81,7 +81,22 @@ Include = /etc/pacman.d/mirrorlist
 #[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
+# [haskell-core] 
+# Server = http://xsounds.org/~haskell/core/$arch 
+
+# [haskell-happstack]
+# Server = http://noaxiom.org/$repo/$arch 
+
 [community]
+Include = /etc/pacman.d/mirrorlist
+
+# If you want to run 32 bit applications on your x86_64 system,
+# enable the multilib repositories as required here.
+
+#[multilib-testing]
+#Include = /etc/pacman.d/mirrorlist
+
+[multilib]
 Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
@@ -89,4 +104,3 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
